[gd_scene load_steps=16 format=1]

[ext_resource path="res://scripts/lobby.gd" type="Script" id=1]
[ext_resource path="res://fonts/OstrichSans-Black.otf" type="DynamicFontData" id=2]
[ext_resource path="res://sound/day19.ogg" type="AudioStream" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=3]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=4]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=5]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=6]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=7]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="DynamicFont" id=8]

font/size = 92
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=9]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.176471, 0.176471, 0.176471, 1 )
light_color = Color( 0.176471, 0.176471, 0.176471, 1 )
dark_color = Color( 0.176471, 0.176471, 0.176471, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="StyleBoxFlat" id=10]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 1, 0.335938, 0.335938, 1 )
light_color = Color( 0, 0, 0, 1 )
dark_color = Color( 0, 0, 0, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="StyleBoxFlat" id=11]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.698039, 0.698039, 0.698039, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="DynamicFont" id=12]

font/size = 32
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[node name="lobby" type="Control"]

process/pause_mode = 2
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="panel" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 357.0
margin/top = 187.0
margin/right = 747.0
margin/bottom = 315.0
custom_styles/panelf = SubResource( 1 )
custom_styles/panel = SubResource( 2 )

[node name="p1" type="Label" parent="panel"]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 90.0
margin/top = 84.0
margin/right = 141.0
margin/bottom = 98.0
text = "player 1"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="charlabel" type="Label" parent="panel"]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 162.0
margin/top = 45.0
margin/right = 245.0
margin/bottom = 59.0
text = "pilot/gremlin"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="p2" type="Label" parent="panel"]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 89.0
margin/top = 124.0
margin/right = 140.0
margin/bottom = 138.0
text = "player 2"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="char1" type="CheckButton" parent="panel"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 167.0
margin/top = 79.0
margin/right = 243.0
margin/bottom = 101.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0

[node name="char2" type="CheckButton" parent="panel"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 169.0
margin/top = 121.0
margin/right = 245.0
margin/bottom = 143.0
toggle_mode = true
is_pressed = true
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0

[node name="maps" type="OptionButton" parent="panel"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 125.0
margin/top = 189.0
margin/right = 242.0
margin/bottom = 209.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0
selected = -1
items = [  ]

[node name="Button" type="Button" parent="panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 53.0
margin/top = 5.0
margin/right = 302.0
margin/bottom = 116.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.429688, 0.429688, 1 )
custom_colors/font_color_pressed = Color( 0.176471, 0.176471, 0.176471, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "play"
flat = false

[node name="error" type="Label" parent="panel"]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 133.0
margin/top = 215.0
margin/right = 252.0
margin/bottom = 230.0
custom_colors/font_color = Color( 0.980469, 0.555344, 0.555344, 1 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="notes1" type="Label" parent="panel"]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 532.0
margin/top = 329.0
margin/right = 662.0
margin/bottom = 402.0
custom_colors/font_color = Color( 0.554688, 0.554688, 0.554688, 1 )
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="notes2" type="Label" parent="panel"]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 138.0
margin/top = 270.0
margin/right = 268.0
margin/bottom = 343.0
text = "this screen doesn\'t actually do anything until i put in networking"
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="match_set" type="HScrollBar" parent="panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -58.0
margin/top = 224.0
margin/right = 392.0
margin/bottom = 277.0
custom_styles/grabber_hilite = SubResource( 9 )
custom_styles/grabber = SubResource( 10 )
custom_styles/scroll = SubResource( 11 )
range/min = 0.0
range/max = 11.0
range/step = 10.0
range/page = 1.0
range/value = 3.0
range/exp_edit = false
range/rounded = true
custom_step = 10.0

[node name="match_text" type="Label" parent="panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 146.0
margin/top = 232.0
margin/right = 213.0
margin/bottom = 287.0
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "60 s"
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="StreamPlayer" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 3 )
stream/play = false
stream/loop = true
stream/volume_db = -5.0
stream/autoplay = true
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[connection signal="pressed" from="panel/Button" to="." method="_on_start_pressed"]


